# miss-demeanor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.githooks/: pre-commit
.github/workflows/: rust.yml
cfg/: example-no-tls-interpreted.toml  example-tls-cabi.toml  example.toml
example-plugins/c/: Makefile  miss-demeanor-pluginutils  trigger.c
example-plugins/golang/: Makefile  trigger.go  trigger.h
example-plugins/python/: github-merged.py
example-plugins/ruby/: Cargo.toml  build.rs  ext.rb  github-merged.rb  http_post.rb
example-plugins/rust/: Cargo.toml  Makefile  miss-demeanor-pluginutils
example-plugins/rust/src/: lib.rs
miss-demeanor-pluginutils/: Cargo.toml
miss-demeanor-pluginutils/src/: lib.rs  ruby.c
ruby/: miss-demeanor-pluginutils.h  miss-demeanor-ruby.c
src/: config.rs  err.rs  main.rs  plugins.rs  webhook.rs
src/plugins/: cabi.rs  cmanager.rs  err.rs  interpreted.rs  mod.rs  python.rs  ruby.rs  rubymanager.rs
src/webhook/: listener.rs  mod.rs  tcp.rs  unix.rs
test-certs/: ca.crt  ca.pem  ca.srl  identity.pfx  localhost.crt  localhost.csr  localhost.pem
