[package]
name = "miss-demeanor"
edition = "2018"
version = "0.3.1"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "Fast, parallel, pluggable process compliance checker"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/miss-demeanor"
keywords = ["process", "compliance", "plugin"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
async-trait = "0.1"
env_logger = "0.5.13"
futures = "0.3"
getopts = "0.2.18"
hyper-tls = "0.5.0"
libc = "0.2.43"
libloading = "0.5.0"
log = "0.4.5"
native-tls = "0.2.1"
serde = "1.0.80"
serde_derive = "1.0.80"
tokio-native-tls = "0.3.0"
toml = "0.4.8"

[dependencies.hyper]
version = "0.14.19"
features = ["server", "http1", "http2"]

[dependencies.tokio]
version = "1.8.4"
features = ["net", "rt-multi-thread", "macros"]

[dependencies.tokio-stream]
version = "0.1.8"
features = ["net"]

[dependencies.miss-demeanor-pluginutils]
version = "0.3.0"
path = "./miss-demeanor-pluginutils"
