[package]
name = "miss-demeanor"
edition = "2018"
version = "0.3.2"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "Fast, parallel, pluggable process compliance checker"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/miss-demeanor"
keywords = ["process", "compliance", "plugin"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
async-trait = "0.1"
env_logger = "0.11.0"
futures = "0.3"
getopts = "0.2.18"
http-body-util = "*"
hyper-tls = "0.6.0"
hyper-util = "0.1.0"
libc = "0.2.43"
libloading = "0.8.0"
log = "0.4.5"
native-tls = "0.2.1"
serde = "1.0.80"
serde_derive = "1.0.80"
tokio-native-tls = "0.3.0"
toml = "0.8.0"

[dependencies.hyper]
version = "1.6.0"
features = ["server", "http2"]

[dependencies.tokio]
version = "1.8.4"
features = ["net", "rt-multi-thread", "macros"]

[dependencies.tokio-stream]
version = "0.1.8"
features = ["net"]

[dependencies.miss-demeanor-pluginutils]
version = "0.3.0"
path = "./miss-demeanor-pluginutils"
