[package]
name = "miss-demeanor-pluginutils"
version = "0.1.0"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "Library for use in miss-demeanor plugins"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/miss-demeanor"
keywords = ["process", "compliance", "plugin"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "missdemeanor"
crate-type = ["lib", "staticlib"]

[dependencies]
libc = "0.2.44"
